Added model for round water tank, added debouncer to limit ultrasound device polling time to avoid invalid results

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,7 +6,6 @@ monitor_speed = 9600
 build_flags=
   -D ARDUINO_USB_CDC_ON_BOOT=1
   -D ARDUINO_USB_MODE=1
-src_filter = +<${PIOENV}/*.h> +<${PIOENV}/**/main.cpp>
-
+build_src_filter = +<${PIOENV}/**/*.h> +<${PIOENV}/**/*.cpp>
 
 [env:water-sensor]
