More power to bluetooth

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,5 +7,6 @@ build_flags=
   -D ARDUINO_USB_CDC_ON_BOOT=1
   -D ARDUINO_USB_MODE=1
 build_src_filter = +<${PIOENV}/**/*.h> +<${PIOENV}/**/*.cpp>
+lib_deps = h2zero/NimBLE-Arduino@^2.1.0
 
 [env:water-sensor]
