--- a/ui/apps/neptun-backend/tsconfig.json
+++ b/ui/apps/neptun-backend/tsconfig.json
@@ -4,6 +4,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/data-model"
+    },
+    {
       "path": "./tsconfig.app.json"
     },
     {
