--- a/ui/apps/neptun-backend/tsconfig.app.json
+++ b/ui/apps/neptun-backend/tsconfig.app.json
@@ -18,5 +18,10 @@
     "eslint.config.js",
     "eslint.config.cjs",
     "eslint.config.mjs"
+  ],
+  "references": [
+    {
+      "path": "../../libs/data-model/tsconfig.lib.json"
+    }
   ]
 }
