--- a/ui/apps/neptun-ui/tsconfig.app.json
+++ b/ui/apps/neptun-ui/tsconfig.app.json
@@ -39,5 +39,10 @@
     "eslint.config.js",
     "eslint.config.cjs",
     "eslint.config.mjs"
+  ],
+  "references": [
+    {
+      "path": "../../libs/data-model/tsconfig.lib.json"
+    }
   ]
 }
