--- a/ui/apps/neptun-ui/tsconfig.json
+++ b/ui/apps/neptun-ui/tsconfig.json
@@ -3,6 +3,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/data-model"
+    },
+    {
       "path": "./tsconfig.app.json"
     },
     {
