--- a/ui/apps/neptun-ui/package.json
+++ b/ui/apps/neptun-ui/package.json
@@ -7,15 +7,18 @@
   "dependencies": {
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
+    "@tailwindcss/vite": "^4.1.8",
     "isbot": "^4.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router": "^7.2.0"
+    "react-router": "^7.2.0",
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@react-router/dev": "^7.2.0",
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0"
+    "@types/react-dom": "19.0.0",
+    "daisyui": "^5.0.43"
   }
 }
