--- a/ui/apps/neptun-ui/package.json
+++ b/ui/apps/neptun-ui/package.json
@@ -11,6 +11,7 @@
     "isbot": "^4.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
     "tailwindcss": "^4.1.8"
   },
