--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -10,3 +10,5 @@ build_src_filter = +<${PIOENV}/**/*.h> +<${PIOENV}/**/*.cpp>
 lib_deps = h2zero/NimBLE-Arduino@^2.1.0
 
 [env:water-sensor]
+
+[env:controller]
