Implemented communication layer

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -3,11 +3,14 @@ platform = espressif32
 board = esp32-c3-devkitm-1
 framework = arduino
 monitor_speed = 9600
+build_unflags = -std=gnu++11
 build_flags=
   -D ARDUINO_USB_CDC_ON_BOOT=1
   -D ARDUINO_USB_MODE=1
+  -std=gnu++2a
 build_src_filter = +<${PIOENV}/**/*.h> +<${PIOENV}/**/*.cpp>
 lib_deps = h2zero/NimBLE-Arduino@^2.1.0
+
 
 [env:water-sensor]
 
