Fixed typings and imports

--- a/ui/apps/neptun-ui/tsconfig.app.json
+++ b/ui/apps/neptun-ui/tsconfig.app.json
@@ -10,7 +10,8 @@
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "rootDir": "app",
-    "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
+    "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo",
+    "moduleResolution": "bundler"
   },
   "include": [
     "app/**/*.ts",
