--- a/ui/libs/data-model/tsconfig.lib.json
+++ b/ui/libs/data-model/tsconfig.lib.json
@@ -5,6 +5,8 @@
     "rootDir": "src",
     "outDir": "dist",
     "tsBuildInfoFile": "dist/tsconfig.lib.tsbuildinfo",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "emitDeclarationOnly": false,
     "forceConsistentCasingInFileNames": true,
     "types": ["node"]
