--- a/ui/.gitignore
+++ b/ui/.gitignore
@@ -42,6 +42,7 @@ Thumbs.db
 .nx/workspace-data
 .cursor/rules/nx-rules.mdc
 .github/instructions/nx.instructions.md
+.react-router
 
 vite.config.*.timestamp*
 vitest.config.*.timestamp*
