--- a/ui/apps/neptun-backend/tsconfig.spec.json
+++ b/ui/apps/neptun-backend/tsconfig.spec.json
@@ -8,8 +8,8 @@
   },
   "ts-node": {
     "compilerOptions": {
-      "module": "commonjs",
-      "moduleResolution": "Node"
+      "module": "esnext",
+      "moduleResolution": "bundler"
     }
   },
   "include": [
