--- a/ui/tsconfig.base.json
+++ b/ui/tsconfig.base.json
@@ -6,8 +6,9 @@
     "importHelpers": true,
     "isolatedModules": true,
     "lib": ["es2022"],
-    "module": "esnext",
+    "module": "es2022",
     "moduleResolution": "bundler",
+    "forceConsistentCasingInFileNames": false,
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
