--- a/ui/package.json
+++ b/ui/package.json
@@ -12,7 +12,9 @@
     "isbot": "^4.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router": "^7.9.3"
+    "react-hook-form": "^7.64.0",
+    "react-router": "^7.9.3",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
