Introduced better modules arrangement, modification in ts config, rewrite of networking

--- a/ui/apps/neptun-ui/tsconfig.app.json
+++ b/ui/apps/neptun-ui/tsconfig.app.json
@@ -10,7 +10,11 @@
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "rootDir": "app",
-    "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
+    "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo",
+    "moduleResolution": "bundler",
+    "paths": {
+      "@ui/*": ["./app/ui/*"]
+    }
   },
   "include": [
     "app/**/*.ts",
