--- a/ui/package.json
+++ b/ui/package.json
@@ -5,39 +5,42 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@react-router/node": "^7.2.0",
-    "@react-router/serve": "^7.2.0",
+    "@react-router/node": "^7.9.3",
+    "@react-router/serve": "^7.9.3",
     "axios": "^1.12.2",
     "express": "^4.21.2",
     "isbot": "^4.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router": "^7.2.0"
+    "react-hook-form": "^7.64.0",
+    "react-router": "^7.9.3",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
-    "@nx/devkit": "21.1.2",
-    "@nx/eslint": "21.1.2",
-    "@nx/eslint-plugin": "21.1.2",
-    "@nx/express": "^21.1.2",
-    "@nx/jest": "21.1.2",
-    "@nx/js": "21.1.2",
-    "@nx/node": "21.1.2",
-    "@nx/playwright": "21.1.2",
-    "@nx/react": "21.1.2",
-    "@nx/vite": "21.1.2",
-    "@nx/web": "21.1.2",
-    "@nx/webpack": "21.1.2",
-    "@nx/workspace": "21.1.2",
+    "@nx/devkit": "^21.6.3",
+    "@nx/eslint": "^21.6.3",
+    "@nx/eslint-plugin": "^21.6.3",
+    "@nx/express": "^21.6.3",
+    "@nx/jest": "^21.6.3",
+    "@nx/js": "^21.6.3",
+    "@nx/node": "^21.6.3",
+    "@nx/playwright": "^21.6.3",
+    "@nx/react": "^21.6.3",
+    "@nx/vite": "^21.6.3",
+    "@nx/web": "^21.6.3",
+    "@nx/webpack": "^21.6.3",
+    "@nx/workspace": "^21.6.3",
     "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-    "@react-router/dev": "^7.2.0",
+    "@react-router/dev": "^7.9.3",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
-    "@swc/cli": "~0.6.0",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@swc/jest": "~0.2.36",
+    "@swc/cli": "^0.7.8",
+    "@swc/core": "^1.13.5",
+    "@swc/helpers": "^0.5.17",
+    "@swc/jest": "^0.2.39",
+    "@tailwindcss/vite": "^4.1.14",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
     "@types/express": "^4.17.21",
@@ -45,7 +48,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
-    "@vitejs/plugin-react": "^4.2.0",
+    "@vitejs/plugin-react": "^5.0.4",
     "@vitest/ui": "^3.0.0",
     "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
@@ -61,13 +64,13 @@
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "21.1.2",
+    "nx": "^21.6.3",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.0",
     "vitest": "^3.0.0",
