--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.12.2",
     "express": "^4.21.2",
     "isbot": "^4.4.0",
+    "mongodb": "^6.20.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.64.0",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@nx-tools/nx-container": "^6.8.2",
     "@nx/devkit": "^21.6.3",
     "@nx/eslint": "^21.6.3",
     "@nx/eslint-plugin": "^21.6.3",
