Added entry data and schema creation

--- a/ui/apps/neptun-backend/tsconfig.app.json
+++ b/ui/apps/neptun-backend/tsconfig.app.json
@@ -21,6 +21,9 @@
   ],
   "references": [
     {
+      "path": "../../libs/app-toolkit/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/data-model/tsconfig.lib.json"
     }
   ]
