--- a/ui/nx.json
+++ b/ui/nx.json
@@ -94,6 +94,11 @@
   "targetDefaults": {
     "test": {
       "dependsOn": ["^build"]
+    },
+    "@nx/js:tsc": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
     }
   },
   "generators": {
@@ -112,5 +117,5 @@
         "linter": "eslint"
       }
     }
-  },
+  }
 }
