--- a/ui/docker-compose.yaml
+++ b/ui/docker-compose.yaml
@@ -8,7 +8,8 @@ services:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
       MONGO_INITDB_DATABASE: neptun
-
+    ports:
+      - 27017:27017
     volumes:
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
 
