--- a/ui/libs/app-toolkit/tsconfig.json
+++ b/ui/libs/app-toolkit/tsconfig.json
@@ -4,13 +4,7 @@
   "include": [],
   "references": [
     {
-      "path": "../../libs/app-toolkit"
-    },
-    {
-      "path": "../../libs/data-model"
-    },
-    {
-      "path": "./tsconfig.app.json"
+      "path": "./tsconfig.lib.json"
     },
     {
       "path": "./tsconfig.spec.json"
