--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "@react-router/node": "^7.9.3",
     "@react-router/serve": "^7.9.3",
     "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "isbot": "^4.4.0",
     "mongodb": "^6.20.0",
@@ -47,7 +48,7 @@
     "@testing-library/react": "16.1.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.0.0",
+    "@types/node": "20.19.9",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@vitejs/plugin-react": "^5.0.4",
@@ -63,6 +64,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jest-util": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
