Added generating token

--- a/ui/apps/neptun-backend/.env.template
+++ b/ui/apps/neptun-backend/.env.template
@@ -4,3 +4,4 @@ MONGO_URL='mongodb://localhost:27017'
 MONGO_DATABASE='neptun'
 MONGO_USER='neptun_user'
 MONGO_PASSWORD='neptun_password'
+AUTHENTICATION_SECRET='<32 char token used to generate JWT access tokes>'
