--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "isbot": "^4.4.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -48,6 +49,7 @@
     "@testing-library/react": "16.1.0",
     "@types/express": "^4.17.23",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "20.19.9",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
