Added useAutnentication middleware

--- a/ui/apps/neptun-backend/tsconfig.json
+++ b/ui/apps/neptun-backend/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "../../tsconfig.base.json",
   "files": [],
-  "include": [],
+  "include": [
+    "./authInfo.d.ts"
+  ],
   "references": [
     {
       "path": "../../libs/app-toolkit"
