--- a/ui/apps/neptun-backend/.env.template
+++ b/ui/apps/neptun-backend/.env.template
@@ -5,3 +5,6 @@ MONGO_DATABASE='neptun'
 MONGO_USER='neptun_user'
 MONGO_PASSWORD='neptun_password'
 AUTHENTICATION_SECRET='<32 char token used to generate JWT access tokes>'
+
+HTTPS_CERT='<path to generated cert for https>'
+HTTPS_KEY='<path to generated private key for https>'
