--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "@react-router/node": "^7.9.3",
     "@react-router/serve": "^7.9.3",
     "axios": "^1.12.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "isbot": "^4.4.0",
@@ -47,6 +48,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.10",
@@ -79,6 +81,7 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.0",
+    "vite-plugin-mkcert": "^1.17.9",
     "vitest": "^3.0.0",
     "webpack-cli": "^5.1.4"
   },
